--- a/index.html
+++ b/index.html
@@ -23,10 +23,17 @@
       margin-bottom: 25px;
       color: #004d00;
     }
+    header{
+      background-color: #003366;
+      width:100%;
+      height:60px;
+    }
   </style>
 </head>
 <body>
-
+<header>
+  <img src="midaverlogo.png" width="100px">
+</header>
   <div class="form-container">
     <h2>Midaver Loan Application</h2>
     <form id="loanForm" action="https://formspree.io/f/xwpwnbzv" method="POST" enctype="multipart/form-data">
@@ -197,3 +204,4 @@
   </script>
 </body>
 </html>
+
