--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
       color: #004d00;
     }
     header{
-      background-color: #003366;
+      background-color: #fff;
       width:100%;
       height:60px;
+      display:flex;
+      justify-content:center;
+      align-items:center;
     }
   </style>
 </head>
-<body>
-<header>
+  <header>
   <img src="midaverlogo.png" width="100px">
 </header>
+<body>
   <div class="form-container">
     <h2>Midaver Loan Application</h2>
     <form id="loanForm" action="https://formspree.io/f/xwpwnbzv" method="POST" enctype="multipart/form-data">
@@ -204,4 +207,5 @@
   </script>
 </body>
 </html>
+
 
