--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     .form-container {
       background: #fff;
       border-radius: 10px;
-      padding: 30px;
+      padding: 30px 0;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       max-width: 700px;
       margin: auto;
@@ -26,7 +26,6 @@
     header{
       background-color: #fff;
       width:100%;
-      height:60px;
       display:flex;
       justify-content:center;
       align-items:center;
@@ -207,5 +206,6 @@
   </script>
 </body>
 </html>
+
 
 
