--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
   <title>Midaver Loan Application - Kenya</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
+    *{
+      padding:0;
+      margin:0;
+    }
     body {
       background-color: #f5f5f5;
       padding: 30px;
@@ -13,7 +17,7 @@
     .form-container {
       background: #fff;
       border-radius: 10px;
-      padding: 30px 0;
+      padding: 30px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
       max-width: 700px;
       margin: auto;
@@ -206,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
