--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   <img src="midaverlogo.png" width="100px">
 </header>
 <body>
-  <div class="form-container">
+  <div class="form-container mt-0">
     <h2>Midaver Loan Application</h2>
     <form id="loanForm" action="https://formspree.io/f/xwpwnbzv" method="POST" enctype="multipart/form-data">
 
@@ -210,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
