--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       color: #004d00;
     }
     header{
+      position:sticky;
       background-color: #fff;
       width:100%;
       display:flex;
@@ -35,10 +36,11 @@
       align-items:center;
     }
   </style>
-</head>
-  <header>
+   <header>
   <img src="midaverlogo.png" width="100px">
 </header>
+</head>
+ 
 <body>
   <div class="form-container mt-0">
     <h2>Midaver Loan Application</h2>
@@ -210,6 +212,7 @@
   </script>
 </body>
 </html>
+
 
 
 
