--- a/index.html
+++ b/index.html
@@ -28,12 +28,16 @@
       color: #004d00;
     }
     header{
-      position:sticky;
-      background-color: #fff;
-      width:100%;
-      display:flex;
-      justify-content:center;
-      align-items:center;
+     position: sticky;
+      top: 0;
+      background-color: #ffffff;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 10px 0;
+      z-index: 1000;
+      border-bottom: 1px solid #ddd;
     }
   </style>
    <header>
@@ -212,6 +216,7 @@
   </script>
 </body>
 </html>
+
 
 
 
